<resources>
    <string name="app_name">VentasGas</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usuario">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="boton1">Accesar</string>
    <string name="Etiqueta1">Login</string>
    <string name="ImagenLlave" />
    <string name="title_activity_menu_principal">MenuPrincipalActivity</string>
    <string name="title_activity_venta">VentaActivity</string>
    <string name="title_activity_productos">ProductosActivity</string>
    <string name="title_activity_vales">ValesActivity</string>
    <string name="title_activity_clientes">ClientesActivity</string>
    <string name="title_activity_gasolinera">GasolineraActivity</string>
    <string name="titulo">Venta De Combustible</string>
    <string name="logo" />
    <string name="Etiqueta2">¿Qué desea hacer?</string>
    <string name="title_activity_registrar_venta">RegistrarVentaActivity</string>
    <string name="Etiqueta3">Registro de nueva venta</string>
    <string name="Etiqueta4">Detalles de venta</string>
    <string name="Etiqueta5">ID del empleado</string>
    <string name="Etiqueta6">Nº cliente</string>
    <string name="Etiqueta7">Sucursal</string>
    <string name="Etiqueta8">Productos</string>
    <string name="check1">Gasolina</string>
    <string name="check2">Normal</string>
    <string name="Etiqueta9">Lubricantes</string>
    <string name="cantidad1">Cantidad (uni)</string>
    <string name="check3">Premiun</string>
    <string name="Etiqueta10">Vales De Descuento</string>
    <string name="check4">Valor $20.00</string>
    <string name="idvale20">ID del vale</string>
    <string name="check5">Valor $10.00</string>
    <string name="idvale10">ID del vale</string>
    <string name="boton2">Calcular Monto</string>
    <string name="title_activity_registrar_emision_vales">RegistrarEmisionVales</string>
    <string name="title_activity_emision_vales">EmisionVales</string>
    <string name="title_activity_vales_aplicados">ValesAplicados</string>
    <string name="title_activity_vales_principal">ValesPrincipal</string>
    <string name="title_activity_emision_insertar">EmisionInsertarActivity</string>
    <string name="title_activity_emision_actualizar">EmisionActualizarActivity</string>
    <string name="title_activity_emision_consultar">EmisionConsultarActivity</string>
    <string name="title_activity_emision_eliminar">EmisionEliminarActivity</string>
    <string name="idemision">ID Emision Vale</string>
    <string name="hint1">ID emision</string>
    <string name="cantidadE">Cantidad Emitida</string>
    <string name="hint2">000000</string>
    <string name="valorE">Valor $</string>
    <string name="fechaE">Fecha de Emision</string>
    <string name="hint3">AAAA-MM-DD</string>
    <string name="insertar">Insertar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="consultar">Consultar</string>
    <string name="title_activity_vales_insertar">ValesInsertarActivity</string>
    <string name="title_activity_vales_consultar">ValesConsultarActivity</string>
    <string name="title_activity_vales_eliminar">ValesEliminarActivity</string>
    <string name="title_activity_vales_actualizar">ValesActualizarActivity</string>
    <string name="idvales">ID Vale</string>
    <string name="idemisionvale">ID Emision vale</string>
    <string name="cantidad">Cantidad</string>
    <string name="valor">Valor $</string>
    <string name="promocion">Promocion</string>
    <string name="fechaV">Fecha Vencimiento</string>
    <string name="title_activity_vaplicados_insertar">VAplicadosInsertarActivity</string>
    <string name="title_activity_vaplicados_consultar">VAplicadosConsultarActivity</string>
    <string name="title_activity_vaplicados_actualizar">VAplicadosActualizarActivity</string>
    <string name="title_activity_vaplicados_eliminar">VAplicadosEliminarActivity</string>
    <string name="idvaleapli">ID Vale Aplicado</string>
    <string name="fechaApli">Fecha </string>
    <string name="cantidadApli">Cantidad Aplicada</string>
    <string name="unidad">Galones</string>
    <string name="labelGasolinera1">Gestionar Gasolineras y Sucursales</string>
    <string name="title_activity_sucursales">SucursalesActivity</string>
    <string name="labelSucursales1">Gestionar Sucursales</string>
    <string name="title_activity_agregar_gasolinera">AgregarGasolineraActivity</string>
    <string name="labelGasolinera3">Gestionar Gasolineras</string>
    <string name="labelGasolinera4">Gestionar Sucursales</string>
    <string name="title_activity_eliminar_gasolinera">EliminarGasolineraActivity</string>
    <string name="title_activity_modificar_gasolinera">ModificarGasolineraActivity</string>
    <string name="title_activity_consultar_gasolinera">ConsultarGasolineraActivity</string>
    <string name="botonGasolinera1">Click Aqui</string>
    <string name="ingresarGasLabel1">Agregar Gasolinera</string>
    <string name="IngresarGasLabel2">ID:</string>
    <string name="ingresarGasLabel3">Empresa:</string>
    <string name="insertarGasEdit1">Nombre de la empresa</string>
    <string name="insertarGasLabel4"></string>
    <string name="ingresarGasBoton1">Agregar</string>
    <string name="title_activity_ingresar_sucursal">IngresarSucursalActivity</string>
    <string name="title_activity_eliminar_sucursal">EliminarSucursalActivity</string>
    <string name="title_activity_modificar_sucursal">ModificarSucursalActivity</string>
    <string name="title_activity_consultar_sucursal">ConsultarSucursalActivity</string>
    <string name="eliminarGasLabel1">Eliminar Gasolinera</string>
    <string name="eliminarGasLabel2">ID de la gasolinera:</string>
    <string name="eliminarGasBoton1">Eliminar</string>
    <string name="modificarGasLabel1">Modificar Datos de Gasolinera</string>
    <string name="modificarGasEdit1">Nombre de la empresa</string>
    <string name="modificarGasBoton1">Modificar</string>
    <string name="consultarGasLabel1">Consultar Datos de Gasolinera</string>
    <string name="consultarGasLabel2" />
    <string name="ingresarSucursalLabel1">Agregar Sucursal</string>
    <string name="ingresarSucursalLabel2">Nombre:</string>
    <string name="ingresarSucursalLabel3">Dirección:</string>
    <string name="ingresarSucursalLabel4">Teléfono:</string>
    <string name="ingresarSucursalBoton1">Agregar</string>
    <string name="ingresarSucursalLabel5" />
    <string name="ingresarSucursalEdit1"></string>
    <string name="eliminarSucursalLabel1">Eliminar Sucursal</string>
    <string name="modificarSucursalLabel1">Modificar Datos de Sucursal</string>
    <string name="eliminarSucursalLabel2">Seleccione el ID de la sucursal:</string>
    <string name="consultarSucursalLabel1">Consultar Datos de Sucursal</string>
    <string name="consultarSucursalLabel2"></string>
    <string name="ConsultarSucursalLabel3" />
    <string name="ConsultarSucursalLabel4" />
    <string name="gestionclientes">Gestionar Clientes de Gasolinera</string>
    <string name="opcioncliente">¿Que opcion Desea Realizar?</string>
    <string name="listviewClientes" />
    <string name="title_activity_agregar_cliente">AgregarClienteActivity</string>
    <string name="title_activity_eliminar_cliente">EliminarClienteActivity</string>
    <string name="title_activity_modificar_cliente">ModificarClienteActivity</string>
    <string name="title_activity_consultar_cliente">ConsultarClienteActivity</string>
    <string name="agregarcliente">Agregar Cliente</string>
    <string name="idcliente">ID Cliente </string>
    <string name="idclienteing">ID Cliente :</string>
    <string name="nom1">Primer Nombre :</string>
    <string name="nom2">Segundo Nombre :</string>
    <string name="nom3">Tercer Nombre :</string>
    <string name="btningcliente">Ingresar</string>
    <string name="ape2">Segundo Apellido :</string>
    <string name="elimcliente">Eliminar Cliente</string>
    <string name="Selecidclien">Seleccionar ID de Cliente :</string>
    <string name="btnelimcliente">Eliminar</string>
    <string name="consultcliente">Consultar Datos Cliente</string>
    <string name="idclien">Seleccionar ID de Cliente</string>
   <string name="n1">Primer Nombre</string>
    <string name="n2">Segundo Nombre</string>
    <string name="n3">Tercer Nombre</string>
    <string name="appe1">Primer Apellido :</string>
    <string name="appe2">Segundo Apellido :</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="appee1">Primer Apellido</string>
    <string name="modifcliente">Modificar Datos Cliente</string>
    <string name="selectidcliente">Seleccionar Id de cliente :</string>
    <string name="appp1">Primer Apellido</string>
    <string name="appp2">Segundo Apellido</string>
    <string name="nombr1">Primer Nombre</string>
    <string name="nombr2">Segundo Nombre</string>
    <string name="nombr3">Tercer Nombe</string>
    <string name="modificar">Modificar</string>
    <string name="Nombre1"/>
    <string name="Nombre2"/>
    <string name="Nombre3"/>
    <string name="Apellido1"/>
    <string name="Apellido2"/>
    <string name="IdCliente">abc-###</string>
    <string name="title_activity_menu_productos">MenuProductos</string>
    <string name="titulo_MenuProductos">Menu de Productos</string>
    <string name="boton1_MenuProductos">Productos</string>
    <string name="boton2_MenuProductos">Detalle de Precio</string>
    <string name="boton3_MenuProductos">Lista de precios</string>
    <string name="boton4_MenuProductos">Tipo de combustible</string>
    <string name="title_activity_detalle_de__precio">Detalle_de_Precio</string>
    <string name="title_activity_lista_de__precio">Lista_de_Precio</string>
    <string name="title_activity_tipo_de_combustible">Tipo_de_combustible</string>
    <string name="btnInsertarRegistro">Insertar Registro</string>
    <string name="btnActualizarRegistro">Actualizar Registro</string>
    <string name="btnEliminarRegistro">Eliminar Registro</string>
    <string name="btnConsultarRegistro">Consultar Registro</string>
    <string name="tituloProductos">Productos</string>
    <string name="tituloDetalleDePrecio">Detalle de precio</string>
    <string name="tituloTipoDeCombustible">Tipo de combustible</string>
    <string name="tituloListaDePrecios">Lista de precios</string>
    <string name="title_activity_actualizar_productos">ActualizarProductos</string>
    <string name="title_activity_actualizar_detalle_de_precio">ActualizarDetalleDePrecio</string>
    <string name="title_activity_actualizar_lista_de_precio">ActualizarListaDePrecio</string>
    <string name="title_activity_actualizar_tipo_de_combustible">ActualizarTipoDeCombustible</string>
    <string name="title_activity_insertar_detalle_de_precio">InsertarDetalleDePrecio</string>
    <string name="title_activity_insertar_lista_de_precio">InsertarListaDePrecio</string>
    <string name="title_activity_insertar_producto">InsertarProducto</string>
    <string name="title_activity_insertar_tipo_de_combustible">InsertarTipoDeCombustible</string>
    <string name="title_activity_eliminar_detalle_de_precio">EliminarDetalleDePrecio</string>
    <string name="title_activity_eliminar_lista_de_precio">EliminarListaDePrecio</string>
    <string name="TipoCombustibleCampo1">ID Tipo Combustible</string>
    <string name="bs09001BtnEliminar">Eliminar</string>
    <string name="bs09001TextFielValorPorDefecto" />
    <string name="idClientes">ID del cliente:</string>
    <string name="primerApe"/>
    <string name="ConsultarVale">Consultar Vale</string>
    <string name="hintIDVale">AAAA-MM-###-(10|20)</string>
    <string name="IDEmisionVale">AAAA-MM-###</string>
    <string name="EmisionInsertar">Insertar Emision Vale</string>
    <string name="ValesActualizar">Actualizar Vales</string>
    <string name="ValesInsertar">Insertar Vales</string>
</resources>