<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondoproducto4"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ValesActualizarActivity" >

    <TextView
        android:id="@+id/titulovalesactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150sp"
        android:layout_marginTop="150sp"
        android:text="@string/ValesActualizar"
        android:textSize="@dimen/size1" />

<TextView
        android:id="@+id/idvaleactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idvales"
        android:textSize="@dimen/size1" />

    <EditText
        android:id="@+id/IdValeActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintIDVale"
        android:inputType="text"
        android:maxLength="14" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/idemisionvaleactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idemisionvale" 
        android:textSize="@dimen/size1"/>

    <EditText
        android:id="@+id/IdEmisionValeActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IDEmisionVale"
        android:inputType="text"
        android:maxLength="11" />

    <TextView
        android:id="@+id/cantidadvalesactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad" 
        android:textSize="@dimen/size1"/>

    <EditText
        android:id="@+id/CantidadValesActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:maxLength="5"
       />

    <TextView
        android:id="@+id/valorvalesactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textSize="@dimen/size1" />

    <EditText
        android:id="@+id/ValorValesActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/promocionvalesactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promocion"
        android:textSize="@dimen/size1" />

    <EditText
        android:inputType="text"
        android:id="@+id/PromocionValesActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:maxLength="30"/>

    <TextView
        android:id="@+id/fechavalesactualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaV"
        android:textSize="@dimen/size1" />

    <EditText
        android:id="@+id/FechaValesActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="date"
        android:maxLength="10" />

    <Button
        android:id="@+id/botonValesActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="50dp"
        android:text="@string/actualizar"
        android:textSize="@dimen/size1"
        android:onClick="actualizarVale" />
    
</LinearLayout>
